 Installation will now never repace the items.xml file unless it is missing

2.2.2, ?.?.2010
Enhancments

Defects
 Cavebot: Fixed toggling between two creatures
 ItemConfig: Fixed "refresh items from file" button

2.2.1, 28.3.2010
Defects
 Spellcaster: Fixed not casting spells
 Spellcaster: Fixed never casting when cast mana == maximum mana

2.2.0, 27.3.2010
Enhancments
 Spellcaster: New and improved spellcaster
 Item Config: Created Tree Control for items, visit wiki for more information
 Python: Added entirely new taitem python functions
 Python: Added MoveUp/Down/Right/Left functions
 Python: Added other function
 Python: Removed older taitem python functions(only functions not used in forum python scripts)
 Tibia Auto: Separated out items and constants into different files
 Tibia Auto: Installation added new items and consts XMLs and will not need to overwrite future items.xml's
        REMINDER             to check with Akilez)Auto Go/Log: On logout the cavebot will Half attack, but stay in the same spot until log out
 Cavebot: Able to choose your own prefix for loading mini map labels (default was $ta)
 Cavebot: For the trainer, a player must be attacking you to be considered an "Alien"
 Cavebot: Fixed sometimes not looting creature after killing
 Autolooter: Improved algorithm for auto open corpses to always loot except when a creature dies while it is moving items
 
Defects
 Auto Login: Fixed closing backpack after opening them
 Auto Go/Log: Fixed Logging out command for alarms(it now logs out)
 Auto Login: Always maximizes window when trying to log in
 Tiles: Made closed hole very slow so that in case it is actually open but not researched it will avoid it
 Python: Fixed crash on invalid parameter or module name
 Python: Fixed error when reading nonexistent item or non-existent character ID
 Cavebot: Radius now works properly and chooses a random distance to walk to within the radius
 Cavebot: Fixed high CPU usage created by pathfinding and causing lag